<resources>
    <string name="app_name">Track This</string>
    <string name="architecture">Architecture</string>
    <string name="automotive">Automotive</string>
    <string name="biology">Biology</string>
    <string name="ecology">Ecology</string>
    <string name="engineering">Engineering</string>
    <string name="finance">Finance</string>
    <string name="geology">Geology</string>
    <string name="history">History</string>
    <string name="journalism">Journalism</string>
    <string name="law">Law</string>
    <string name="physics">Physics</string>
    <string name="crafts">Crafts</string>
    <string name="business">Business</string>
    <string name="culinary">Culinary</string>
    <string name="design">Design</string>
    <string name="fashion">Fashion</string>
    <string name="film">Film</string>
    <string name="gaming">Gaming</string>
    <string name="drawing">Drawing</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="music">Music</string>
    <string name="painting">Painting</string>
    <string name="photography">Photography</string>
    <string name="tech">Tech</string>
    <string name="topbar_title">Track This!</string>
    <string name="expand_button_content_description">See more or less information about a Card.</string>
    <string name="final_goal">Final Goal (hrs)</string>
    <string name="daily_effort">Daily Effort (hrs)</string>
    <string name="description">Description</string>
    <string name="study_name">Study Name</string>
    <string name="starting_date">Starting Date</string>
    <string name="ending_date">Ending Date</string>
    <string name="hours">Hours</string>
    <string name="weekly_effort">Weekly Effort (hrs/day)</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="daily_effort_error">Daily Effort cannot be Greater than Final Goal!!!</string>
    <string name="dates_error">Starting Date cannot be greater than Ending Date!!!</string>
    <string name="back_button">Back Button</string>
    <string name="refresh">Refresh</string>
    <string name="progress_bar">Completed</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome </string>
    <string name="register_button">Register</string>
    <string name="login_button">Login</string>
    <string name="logout_button">Logout</string>
    <string name="m_circle">M</string>
    <string name="t_circle">T</string>
    <string name="w_circle">W</string>
    <string name="f_circle">F</string>
    <string name="s_circle">S</string>
    <string name="timer_running_toast">The Timer is Running! Navigation between Topics is Disabled!!!</string>
    <string name="user_not_logged">User not Logged In</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="refresh_data_button">Refresh Data</string>
    <string name="delete_button">Delete</string>
    <string name="starting_date_label">"Starting Date: "</string>
    <string name="ending_date_label">"Ending Date: "</string>
    <string name="daily_effort_cannot_be_greater_than_24_hours">Daily effort cannot be greater than 24 hours</string>

</resources>