...
                .padding(dimensionResource(R.dimen.padding_medium2))
                .align(Alignment.End),
            enabled = if (!timerUiState.isTimerRunning) trackEntryUiState.isFormValid else false
        ) {
            Icon(
                Icons.Filled.Add,
                "Submit",
                tint = MaterialTheme.colorScheme.onPrimary
            )
        }
    }
}
/**
...
        onDismissRequest = onDismiss,
        confirmButton = {
            TextButton(onClick = {
                onDateSelected(datePickerState.selectedDateMillis)
                onDismiss()
            }) {
                Text("OK")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
...
